refactor: Standardize reference data controller architecture
This commit refactors the reference data controller architecture to use
a consistent pattern based on TenantAwareCrudController and
TenantAwareCrudService. This simplifies the code, reduces
duplication, and improves maintainability.

The main changes include:
- Introduced TenantAwareCrudController and Service
- Removed AbstractReferenceController and Service
- Updated all reference data controllers and services to use the new
  base classes/interfaces
- Improved error handling and logging

BREAKING CHANGE: Removed AbstractReferenceController and Service