@@ -14,7 +14,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
 
 /**
  * Implémentation du service d'application pour la gestion des véhicules.
@@ -29,12 +29,12 @@ public class VehicleServiceImpl implements VehicleService {
     @Override
     @Transactional
     public VehicleDTO createVehicle(CreateVehicleCommand command) {
-        log.debug("Création d'un nouveau véhicule avec immatriculation: {}", command.getRegistrationNumber());
+        log.debug("Création d'un nouveau véhicule avec immatriculation: {}", command.registrationNumber());
 
         // Vérifier si un véhicule avec la même immatriculation existe déjà
-        vehicleRepository.findByRegistrationNumber(command.getRegistrationNumber(), command.getOrganizationId())
+        vehicleRepository.findByRegistrationNumber(command.registrationNumber(), command.organizationId())
                 .ifPresent(v -> {
-                    throw AutoResourceAlreadyExistsException.forIdentifier("Véhicule", "immatriculation", command.getRegistrationNumber());
+                    throw AutoResourceAlreadyExistsException.forIdentifier("Véhicule", "immatriculation", command.registrationNumber());
                 });
 
         // Créer et sauvegarder le véhicule
@@ -78,9 +78,10 @@ public class VehicleServiceImpl implements VehicleService {
 
         List<Vehicle> vehicles = vehicleRepository.findAllByOrganizationId(organizationId);
 
+        // Utiliser toList() de Java 16+ au lieu de collect(Collectors.toList())
         return vehicles.stream()
                 .map(this::mapEntityToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -90,9 +91,10 @@ public class VehicleServiceImpl implements VehicleService {
 
         List<Vehicle> vehicles = vehicleRepository.findAllByOwnerIdAndOrganizationId(ownerId, organizationId);
 
+        // Utiliser toList() de Java 16+ au lieu de collect(Collectors.toList())
         return vehicles.stream()
                 .map(this::mapEntityToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -105,23 +107,46 @@ public class VehicleServiceImpl implements VehicleService {
                 .orElseThrow(() -> AutoResourceNotFoundException.forId("Véhicule", id));
 
         // Vérifier que le véhicule appartient à l'organisation
-        if (!existingVehicle.getOrganizationId().equals(command.getOrganizationId())) {
+        if (!existingVehicle.getOrganizationId().equals(command.organizationId())) {
             throw AutoResourceNotFoundException.forId("Véhicule", id);
         }
 
         // Si l'immatriculation a changé, vérifier qu'elle n'est pas déjà utilisée
-        if (!existingVehicle.getRegistrationNumber().equals(command.getRegistrationNumber())) {
-            vehicleRepository.findByRegistrationNumber(command.getRegistrationNumber(), command.getOrganizationId())
+        if (!existingVehicle.getRegistrationNumber().equals(command.registrationNumber())) {
+            vehicleRepository.findByRegistrationNumber(command.registrationNumber(), command.organizationId())
                     .ifPresent(v -> {
                         if (!v.getId().equals(id)) {
-                            throw AutoResourceAlreadyExistsException.forIdentifier("Véhicule", "immatriculation", command.getRegistrationNumber());
+                            throw AutoResourceAlreadyExistsException.forIdentifier("Véhicule", "immatriculation", command.registrationNumber());
                         }
                     });
         }
 
-        // Mettre à jour les propriétés du véhicule
-        Vehicle updatedVehicle = mapCommandToEntity(command);
-        updatedVehicle.setId(id);
+        // Créer une nouvelle instance de Vehicle avec l'ID existant et les nouvelles propriétés
+        // Create a new vehicle with basic properties
+        Vehicle updatedVehicle = new Vehicle();
+        updatedVehicle.setId(id); // Conserver l'ID existant
+        updatedVehicle.setRegistrationNumber(command.registrationNumber());
+        updatedVehicle.setModelVariant(command.modelVariant());
+        updatedVehicle.setYear(command.year());
+        updatedVehicle.setEnginePower(command.enginePower());
+        updatedVehicle.setEngineSize(command.engineSize());
+        updatedVehicle.setPurchaseDate(command.purchaseDate());
+        updatedVehicle.setPurchaseValue(command.purchaseValue());
+        updatedVehicle.setCurrentValue(command.currentValue());
+        updatedVehicle.setMileage(command.mileage());
+        updatedVehicle.setVin(command.vin());
+        updatedVehicle.setOwnerId(command.ownerId());
+        updatedVehicle.setOrganizationId(command.organizationId());
+
+        // Set IDs for related entities
+        updatedVehicle.setManufacturerId(command.makeId());
+        updatedVehicle.setModelId(command.modelId());
+        updatedVehicle.setFuelTypeId(command.fuelTypeId());
+        updatedVehicle.setCategoryId(command.categoryId());
+        updatedVehicle.setSubcategoryId(command.subcategoryId());
+        updatedVehicle.setUsageId(command.usageId());
+        updatedVehicle.setGeographicZoneId(command.geographicZoneId());
+        updatedVehicle.setColorId(command.colorId());
 
         Vehicle savedVehicle = vehicleRepository.save(updatedVehicle);
 
@@ -151,30 +176,30 @@ public class VehicleServiceImpl implements VehicleService {
      * @return L'entité correspondante
      */
     private Vehicle mapCommandToEntity(CreateVehicleCommand command) {
-        Vehicle vehicle = Vehicle.builder()
-                .registrationNumber(command.getRegistrationNumber())
-                .modelVariant(command.getModelVariant())
-                .year(command.getYear())
-                .enginePower(command.getEnginePower())
-                .engineSize(command.getEngineSize())
-                .purchaseDate(command.getPurchaseDate())
-                .purchaseValue(command.getPurchaseValue())
-                .currentValue(command.getCurrentValue())
-                .mileage(command.getMileage())
-                .vin(command.getVin())
-                .ownerId(command.getOwnerId())
-                .organizationId(command.getOrganizationId())
-                .build();
+        // Créer une nouvelle instance de Vehicle avec tous les champs
+        Vehicle vehicle = new Vehicle();
+        vehicle.setRegistrationNumber(command.registrationNumber());
+        vehicle.setModelVariant(command.modelVariant());
+        vehicle.setYear(command.year());
+        vehicle.setEnginePower(command.enginePower());
+        vehicle.setEngineSize(command.engineSize());
+        vehicle.setPurchaseDate(command.purchaseDate());
+        vehicle.setPurchaseValue(command.purchaseValue());
+        vehicle.setCurrentValue(command.currentValue());
+        vehicle.setMileage(command.mileage());
+        vehicle.setVin(command.vin());
+        vehicle.setOwnerId(command.ownerId());
+        vehicle.setOrganizationId(command.organizationId());
 
-        // Utiliser les setters pour définir les IDs
-        vehicle.setManufacturerId(command.getMakeId());
-        vehicle.setModelId(command.getModelId());
-        vehicle.setFuelTypeId(command.getFuelTypeId());
-        vehicle.setCategoryId(command.getCategoryId());
-        vehicle.setSubcategoryId(command.getSubcategoryId());
-        vehicle.setUsageId(command.getUsageId());
-        vehicle.setGeographicZoneId(command.getGeographicZoneId());
-        vehicle.setColorId(command.getColorId());
+        // Ajouter les IDs directement
+        vehicle.setManufacturerId(command.makeId());
+        vehicle.setModelId(command.modelId());
+        vehicle.setFuelTypeId(command.fuelTypeId());
+        vehicle.setCategoryId(command.categoryId());
+        vehicle.setSubcategoryId(command.subcategoryId());
+        vehicle.setUsageId(command.usageId());
+        vehicle.setGeographicZoneId(command.geographicZoneId());
+        vehicle.setColorId(command.colorId());
 
         return vehicle;
     }
@@ -190,23 +215,37 @@ public class VehicleServiceImpl implements VehicleService {
                 .id(vehicle.getId())
                 .registrationNumber(vehicle.getRegistrationNumber())
                 .manufacturerId(vehicle.getManufacturerId())
+                .manufacturerName(null) // manufacturerName - à compléter si nécessaire
                 .modelId(vehicle.getModelId())
+                .modelName(null) // modelName - à compléter si nécessaire
+                .modelVariant(vehicle.getModelVariant())
                 .version(vehicle.getVersion())
                 .year(vehicle.getYear())
                 .enginePower(vehicle.getEnginePower())
                 .engineSize(vehicle.getEngineSize())
                 .fuelTypeId(vehicle.getFuelTypeId())
+                .fuelTypeName(null) // fuelTypeName - à compléter si nécessaire
                 .categoryId(vehicle.getCategoryId())
+                .categoryName(null) // categoryName - à compléter si nécessaire
                 .subcategoryId(vehicle.getSubcategoryId())
+                .subcategoryName(null) // subcategoryName - à compléter si nécessaire
                 .usageId(vehicle.getUsageId())
+                .usageName(null) // usageName - à compléter si nécessaire
                 .geographicZoneId(vehicle.getGeographicZoneId())
+                .geographicZoneName(null) // geographicZoneName - à compléter si nécessaire
                 .purchaseDate(vehicle.getPurchaseDate())
                 .purchaseValue(vehicle.getPurchaseValue())
                 .currentValue(vehicle.getCurrentValue())
                 .mileage(vehicle.getMileage())
                 .vin(vehicle.getVin())
                 .colorId(vehicle.getColorId())
+                .colorName(null) // colorName - à compléter si nécessaire
                 .ownerId(vehicle.getOwnerId())
+                .ownerName(null) // ownerName - à compléter si nécessaire
+                .organizationId(vehicle.getOrganizationId())
+                .autoPolicyId(vehicle.getAutoPolicyId())
+                .hasAntiTheftDevice(vehicle.isHasAntiTheftDevice())
+                .parkingType(vehicle.getParkingType() != null ? vehicle.getParkingType().name() : null)
                 .build();
     }
 }
